--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </main>
 
 <footer>
-  Created by #1 Logical Potato, with help from Magic Dippy Egg | &copy; 2025 Memepedia: Rebirth
+  Created by #1 Logical Potato, with help from Magic Dippy Egg
 </footer>
 
 </body>
