--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
   <p>Come hang out with meme lovers, artists, and creative souls!</p>
   <a href="https://discord.gg/yvCTUBHNks" class="button" target="_blank">Join Our Discord</a>
   <a href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT" class="button" target="_blank">View GitHub Content</a>
+  <a href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/raw/refs/heads/main/Download/Meme%20Goose.msi" class="button" target="_blank">Download Meme Goose</a>
 </main>
 
 <footer>
-  Created by #1 Logical Potato, with help from Magic Dippy Egg
+  Created by #1 Logical Potato, with help from Magic Dippy Egg | <br>Credits to the original creators of Desktop Goose: <a href="https://samperson.itch.io/desktop-goose" target="_blank">Samperson</a>
 </footer>
 
 </body>
