--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
       width: 100%;
       bottom: 0;
     }
+    footer a {
+      color: #cc5500;
+      text-decoration: none;
+    }
+    footer a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -67,10 +74,12 @@
   <a href="https://discord.gg/yvCTUBHNks" class="button" target="_blank">Join Our Discord</a>
   <a href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT" class="button" target="_blank">View GitHub Content</a>
   <a href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/raw/refs/heads/main/Download/Meme%20Goose.msi" class="button" target="_blank">Download Meme Goose</a>
+  <a href="https://www.youtube.com/@MemepediaRebirth" class="button" target="_blank">Visit Our YouTube</a>
 </main>
 
 <footer>
-  Created by #1 Logical Potato, with help from Magic Dippy Egg | <br>Credits to the original creators of Desktop Goose: <a href="https://samperson.itch.io/desktop-goose" target="_blank">Samperson</a>
+  Created by #1 Logical Potato, with help from Magic Dippy Egg | <br>
+  Credits to the original creators of Desktop Goose: <a href="https://samperson.itch.io/desktop-goose" target="_blank">Samperson</a>
 </footer>
 
 </body>
