--- a/index.html
+++ b/index.html
@@ -2,20 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Memepedia: Rebirth</title>
   <link rel="icon" href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true">
   <style>
     body {
       font-family: 'Arial', sans-serif;
-      background-color: #000000;
+      background: linear-gradient(-45deg, #0d0d0d, #1a1a1a, #0d0d0d, #1a1a1a);
+      background-size: 400% 400%;
+      animation: gradientBackground 20s ease infinite;
       color: #ffffff;
       margin: 0;
       padding: 0;
       text-align: center;
+      min-height: 100vh;
     }
+
+    @keyframes gradientBackground {
+      0% {background-position: 0% 50%;}
+      50% {background-position: 100% 50%;}
+      100% {background-position: 0% 50%;}
+    }
+
     header {
-      background-color: #cc5500; /* Darker orange */
+      background-color: #cc5500;
       color: #ffffff;
       padding: 20px 0;
     }
@@ -32,15 +42,18 @@
       display: inline-block;
       margin: 10px;
       padding: 15px 25px;
-      background-color: #cc5500; /* Darker orange */
+      background-color: #cc5500;
       color: white;
       text-decoration: none;
       border-radius: 8px;
       font-size: 18px;
-      transition: background-color 0.3s;
+      transition: 0.3s ease;
+      box-shadow: 0 0 5px #cc5500;
     }
     a.button:hover {
-      background-color: #b34700; /* Even darker orange for hover */
+      background-color: #b34700;
+      box-shadow: 0 0 10px #ff6600;
+      transform: scale(1.03);
     }
     footer {
       background-color: #111;
@@ -50,13 +63,6 @@
       position: fixed;
       width: 100%;
       bottom: 0;
-    }
-    footer a {
-      color: #cc5500;
-      text-decoration: none;
-    }
-    footer a:hover {
-      text-decoration: underline;
     }
   </style>
 </head>
@@ -74,12 +80,14 @@
   <a href="https://discord.gg/yvCTUBHNks" class="button" target="_blank">Join Our Discord</a>
   <a href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT" class="button" target="_blank">View GitHub Content</a>
   <a href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/raw/refs/heads/main/Download/Meme%20Goose.msi" class="button" target="_blank">Download Meme Goose</a>
-  <a href="https://www.youtube.com/@MemepediaRebirth" class="button" target="_blank">Visit Our YouTube</a>
+  <a href="https://www.youtube.com/@MemepediaRebirth" class="button" target="_blank">YouTube Channel</a>
+
+  <h3 style="margin-top: 40px;">Credits</h3>
+  <p>Original Desktop Goose by <a href="https://samperson.itch.io/desktop-goose" target="_blank" style="color: #ff6600;">Sam Chiet</a></p>
 </main>
 
 <footer>
-  Created by #1 Logical Potato, with help from Magic Dippy Egg | <br>
-  Credits to the original creators of Desktop Goose: <a href="https://samperson.itch.io/desktop-goose" target="_blank">Samperson</a>
+  Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 </body>
