--- a/gallery.html
+++ b/gallery.html
@@ -81,8 +81,12 @@
 <a href="index.html" class="button">Back to Home</a>
 
 <footer>
-  Memepedia Rebirth Gallery | Made with ❤️ by Logical Potato & Magic Dippy Egg
+  Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
+
+</body>
+</html>
+
 
 </body>
 </html>
