maybe its asking for summery cause im making new files?

--- a/gallery.html
+++ b/gallery.html
@@ -69,7 +69,7 @@
 <main>
   <!-- Add your memes below! Just copy this line for every meme: -->
   <img src="memes/meme1.webp" alt="Meme1">
-  <img src="memes/meme2.png" alt="Meme2">
+  <img src="memes/meme2.jpg" alt="Meme2">
   <img src="memes/meme3.png" alt="Meme3">
   
   <!-- Example: 
