--- a/gallery.html
+++ b/gallery.html
@@ -71,6 +71,7 @@
   <img src="memes/meme1.webp" alt="Meme1">
   <img src="memes/meme2.jpg" alt="Meme2">
   <img src="memes/meme3.png" alt="Meme3">
+  <img src="memes/meme4.gif" alt="Meme4">
   
   <!-- Example: 
   <img src="memes/meme1.png" alt="Meme 1">
