--- a/gallery.html
+++ b/gallery.html
@@ -72,6 +72,7 @@
   <img src="memes/meme2.jpg" alt="Meme2">
   <img src="memes/meme3.gif" alt="Meme3">
   <img src="memes/meme4.gif" alt="Meme4">
+  <img src="memes/meme5.png" alt="Meme5">
   
   <!-- Example: 
   <img src="memes/meme1.png" alt="Meme 1">
