--- a/gallery.html
+++ b/gallery.html
@@ -73,6 +73,8 @@
   <img src="memes/meme3.gif" alt="Meme3">
   <img src="memes/meme4.gif" alt="Meme4">
   <img src="memes/meme5.png" alt="Meme5">
+  <img src="memes/meme6.webp" alt="Meme6">
+  <img src="memes/meme7.webp" alt="Meme7">
   
   <!-- Example: 
   <img src="memes/meme1.png" alt="Meme 1">
