--- a/gallery.html
+++ b/gallery.html
@@ -75,6 +75,8 @@
   <img src="memes/meme5.png" alt="Meme5">
   <img src="memes/meme6.webp" alt="Meme6">
   <img src="memes/meme7.webp" alt="Meme7">
+  <img src="memes/meme8.gif" alt="Meme8">
+  
   
   <!-- Example: 
   <img src="memes/meme1.png" alt="Meme 1">
