--- a/gallery.html
+++ b/gallery.html
@@ -76,6 +76,7 @@
   <img src="memes/meme6.webp" alt="Meme6">
   <img src="memes/meme7.webp" alt="Meme7">
   <img src="memes/meme8.gif" alt="Meme8">
+  <img src="memes/meme9.webp" alt="Meme9">
   
   
   <!-- Example: 
