--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
   <a href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/raw/refs/heads/main/Download/Meme%20Goose.msi" class="button" target="_blank">Download Meme Goose</a>
   <a href="https://www.youtube.com/@MemepediaRebirth" class="button" target="_blank">YouTube Channel</a>
   <a href="gallery" class="button">Visit Meme Gallery</a>
+  
+   <h2>Other Pages</h2>
+     <a href="gallery" class="button">Visit Meme Gallery</a>
 
   <h3 style="margin-top: 40px;">Credits</h3>
   <p>Original Desktop Goose by <a href="https://samperson.itch.io/desktop-goose" target="_blank" style="color: #ff6600;">Samperson</a></p>
