--- a/gallery.html
+++ b/gallery.html
@@ -85,7 +85,7 @@
 </main>
 
 <!-- Button to go back to the home page -->
-<a href="index.html" class="button">Back to Home</a>
+<a href="index" class="button">Back to Home</a>
 
 <footer>
   Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
