--- a/monthlymeme.html
+++ b/monthlymeme.html
@@ -78,13 +78,13 @@
   <p>Here is this month's meme of the month. Enjoy!</p>
 
   <!-- Add your Meme Image or Content here -->
-  <img src="/monthlymeme/placeholder.png" alt="Meme of the Month" style="width:80%;max-width:600px;">
+  <img src="monthlymeme/placeholder.png" alt="Meme of the Month" style="width:80%;max-width:600px;">
 
   <br><br>
 
   <h2>Past Winners</h2>
   <p>All the past winners. Enjoy!</p>
-    <img src="/monthlymeme/placeholder.png" alt="Meme of the Month" style="width:80%;max-width:600px;">
+    <img src="monthlymeme/placeholder.png" alt="Meme of the Month" style="width:80%;max-width:600px;">
 
 
 <footer>
