--- a/creatorfavmeme.html
+++ b/creatorfavmeme.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meme of the Month - Memepedia</title>
+  <title>Creators Favourite Meme - Memepedia</title>
   <link rel="icon" href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true">
   <style>
     body {
@@ -74,8 +74,8 @@
 </main>
 
 <main>
-  <h2>This Months Meme of the Month!</h2>
-  <p>Here is this month's meme of the month. Enjoy!</p>
+  <h2>This is the meme that was last chosen creators favourite meme!</h2>
+  <p>Take a look or watch depending if its video or photo</p>
 
   <!-- Add your Meme Image or Content here -->
   <img src="monthlymeme/placeholder.png" alt="Meme of the Month" style="width:80%;max-width:600px;">
