--- a/creatorfavmeme.html
+++ b/creatorfavmeme.html
@@ -66,7 +66,7 @@
 
 <header>
   <img src="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true" alt="Memepedia Icon">
-  <h1>Meme of the Month</h1>
+  <h1>Creators Favourite Meme</h1>
 </header>
 
   <!-- Start Page Button -->
