--- a/gallery.html
+++ b/gallery.html
@@ -77,6 +77,7 @@
   <img src="memes/meme7.webp" alt="Meme7">
   <img src="memes/meme8.gif" alt="Meme8">
   <img src="memes/meme9.webp" alt="Meme9">
+  <img src="memes/meme10.jpg" alt="Meme10">
   
   
   <!-- Example: 
