--- a/gallery.html
+++ b/gallery.html
@@ -78,6 +78,7 @@
   <img src="memes/meme8.gif" alt="Meme8">
   <img src="memes/meme9.webp" alt="Meme9">
   <img src="memes/meme10.jpg" alt="Meme10">
+  <img src="memes/meme11.gif" alt="Meme11">
   
   
   <!-- Example: 
