--- a/gallery.html
+++ b/gallery.html
@@ -79,6 +79,7 @@
   <img src="memes/meme9.webp" alt="Meme9">
   <img src="memes/meme10.jpg" alt="Meme10">
   <img src="memes/meme11.gif" alt="Meme11">
+  <img src="memes/meme12.gif" alt="Meme12">
   
   
   <!-- Example: 
