--- a/gallery.html
+++ b/gallery.html
@@ -80,6 +80,7 @@
   <img src="memes/meme10.jpg" alt="Meme10">
   <img src="memes/meme11.gif" alt="Meme11">
   <img src="memes/meme12.gif" alt="Meme12">
+  <img src="memes/meme13.gif" alt="Meme13">
   
   
   <!-- Example: 
