--- a/gallery.html
+++ b/gallery.html
@@ -81,6 +81,7 @@
   <img src="memes/meme11.gif" alt="Meme11">
   <img src="memes/meme12.gif" alt="Meme12">
   <img src="memes/meme13.gif" alt="Meme13">
+  <img src="memes/meme14.gif" alt="Meme14">
   
   
   <!-- Example: 
