--- a/gallery.html
+++ b/gallery.html
@@ -82,6 +82,7 @@
   <img src="memes/meme12.gif" alt="Meme12">
   <img src="memes/meme13.gif" alt="Meme13">
   <img src="memes/meme14.gif" alt="Meme14">
+  <img src="memes/meme15.gif" alt="Meme15">
   
   
   <!-- Example: 
