--- a/gallery.html
+++ b/gallery.html
@@ -83,6 +83,7 @@
   <img src="memes/meme13.gif" alt="Meme13">
   <img src="memes/meme14.gif" alt="Meme14">
   <img src="memes/meme15.gif" alt="Meme15">
+  <img src="memes/meme16.gif" alt="Meme16">
   
   
   <!-- Example: 
