--- a/gallery.html
+++ b/gallery.html
@@ -85,6 +85,7 @@
   <img src="memes/meme15.gif" alt="Meme15">
   <img src="memes/meme16.gif" alt="Meme16">
   <img src="memes/meme17.gif" alt="Meme17">
+  <img src="memes/meme18.gif" alt="Meme18">
   
   
   <!-- Example: 
