--- a/gallery.html
+++ b/gallery.html
@@ -87,6 +87,8 @@
   <img src="memes/meme17.gif" alt="Meme17">
   <img src="memes/meme18.gif" alt="Meme18">
   <img src="memes/meme19.gif" alt="Meme19">
+  <img src="memes/meme20.gif" alt="Meme20">
+  
   
   
   <!-- Example: 
