--- a/gallery.html
+++ b/gallery.html
@@ -88,6 +88,7 @@
   <img src="memes/meme18.gif" alt="Meme18">
   <img src="memes/meme19.gif" alt="Meme19">
   <img src="memes/meme20.gif" alt="Meme20">
+  <img src="memes/meme21.gif" alt="Meme21">
   
   
   
