--- a/comments.html
+++ b/comments.html
@@ -51,7 +51,7 @@
 </header>
 
 <main>
-  <a href="index.html" class="button">Back to Home</a>
+  <a href="index" class="button">Back to Home</a>
 
   <h2>Leave a Comment Below!</h2>
   
