--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   
    <h2>Other Pages</h2>
      <a href="gallery" class="button">Visit Meme Gallery</a>
-	      <a href="gallery" class="button">Visit Comment Section</a>
+	      <a href="comments" class="button">Visit Comment Section</a>
 
   <h3 style="margin-top: 40px;">Credits</h3>
   <p>Original Desktop Goose by <a href="https://samperson.itch.io/desktop-goose" target="_blank" style="color: #ff6600;">Samperson</a></p>
