--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <header>
   <img src="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true" alt="Memepedia Icon">
   <h1>Memepedia: Rebirth</h1>
-  <p>Where memes and creativity collide!</p>
+  <p>Welcome to MEMEPEDIA! A space for memes, art, and creativity. Join, have fun, and be respectful!</p>
 </header>
 
 <main>
