--- a/index.html
+++ b/index.html
@@ -85,14 +85,13 @@
    <h2>Other Pages</h2>
      <a href="gallery" class="button">Visit Meme Gallery</a>
 	      <a href="comments" class="button">Visit Comment Section</a>
-		  	      <a href="contact" class="button">Contact Us!</a>
 
   <h3 style="margin-top: 40px;">Credits</h3>
   <p>Original Desktop Goose by <a href="https://samperson.itch.io/desktop-goose" target="_blank" style="color: #ff6600;">Samperson</a></p>
 </main>
 
 <footer>
-  Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth  <a href="contact" target="_blank" style="color: #ff6600;">Contact Us</a>
 </footer>
 
 </body>
