google form link

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
   <p>Magic Dippy Egg: <strong>@magicdippyegg</strong></p>
   <p>#1 Logical Potato: <strong>@superdino4679</strong></p>
 
-  <a href="YOUR_GOOGLE_FORM_LINK" class="button" target="_blank">Submit Feedback</a>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfSlSxoN22GNaM6ReOzaQdK8KgUvVVNXeNLmC48OXQu5O0QuQ/viewform?usp=header" class="button" target="_blank">Submit Feedback</a>
 
   <br><br>
   <a href="index" class="button">Return to Home</a>
