--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 <header>
   <img src="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true" alt="Memepedia Icon">
   <h1>Memepedia: Rebirth</h1>
-  <p>Welcome to MEMEPEDIA! A space for memes, art, and creativity. Join, have fun, and be respectful!</p>
+  <p>Welcome to MEMEPEDIA! A space for memes, art, and creativity. Join, have fun, and be respectful! <a href="about" target="_blank" style="color: #000000;">Find out more</a> </p>
 </header>
 
 <main>
   <h2>Join the Community</h2>
   <p>Come hang out with meme lovers, artists, and creative souls!</p>
-  <a href="https://discord.gg/yvCTUBHNks" class="button" target="_blank">Join Our Discord</a>
+  <a href="https://discord.gg/yvCTUBHNks" class="button" target="_blank" >Join Our Discord</a>
   <a href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT" class="button" target="_blank">View GitHub Content</a>
   <a href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/raw/refs/heads/main/Download/Meme%20Goose.msi" class="button" target="_blank">Download Meme Goose</a>
   <a href="https://www.youtube.com/@MemepediaRebirth" class="button" target="_blank">YouTube Channel</a>
@@ -89,6 +89,8 @@
   <h3 style="margin-top: 40px;">Credits</h3>
   <p>Original Desktop Goose by <a href="https://samperson.itch.io/desktop-goose" target="_blank" style="color: #ff6600;">Samperson</a></p>
 </main>
+
+
 
 <footer>
   Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth  <a href="contact" target="_blank" style="color: #ff6600;">Contact Us</a>
