--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <header>
   <img src="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true" alt="Memepedia Icon">
   <h1>Memepedia: Rebirth</h1>
-  <p>Welcome to MEMEPEDIA! A space for memes, art, and creativity. Join, have fun, and be respectful! <a href="about" target="_blank" style="color: #000000;">Find out more</a> </p>
+  <p>Welcome to MEMEPEDIA! A space for memes, art, and creativity. Join, have fun, and be respectful! <a href="about" style="color: #000000;">Find out more</a> </p>
 </header>
 
 <main>
