--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
   <p>If you want to send memes, see even more memes, vote, or interact directly with the community, you should join the Discord server.</p>
   <p>Most of the real action and community interaction happens inside the Discord.</p>
 
-  <a href="index.html" class="button">Back to Home</a>
+  <a href="index" class="button">Back to Home</a>
 </main>
 
 <footer>
