--- a/faq.html
+++ b/faq.html
@@ -89,7 +89,7 @@
     <p>Memepedia is a community-driven platform where people can share, discover, and celebrate memes. It is the online version of the Memepedia Discord server, featuring content, challenges, and more!</p>
   </div>
 
-  <a href="index.html" class="button">Go Back Home</a>
+  <a href="index" class="button">Go Back Home</a>
 </main>
 
 <footer>
