--- a/faq.html
+++ b/faq.html
@@ -42,14 +42,29 @@
     .faq-item p {
       margin-top: 5px;
     }
+    
+    /* General Button Styles */
+    .button {
+      display: inline-block;
+      background-color: #cc5500;
+      color: white;
+      padding: 15px 25px;
+      text-decoration: none;
+      border-radius: 8px;
+      font-size: 16px;
+      transition: background-color 0.3s;
+    }
+
+    .button:hover {
+      background-color: #b34700;
+    }
+
     /* Specific CSS for smaller buttons on the FAQ page */
     .faq-page .button {
       padding: 10px 15px; /* Smaller padding */
       font-size: 14px; /* Smaller text */
     }
-    .faq-page .button:hover {
-      background-color: #b34700;
-    }
+
     footer {
       background-color: #111;
       color: #aaaaaa;
@@ -76,7 +91,7 @@
 
   <div class="faq-item">
     <h3>How do I submit memes?</h3>
-    <p>To submit memes, join our Discord server, and share your memes in the appropriate channels.</p>
+    <p>To submit memes, join our Discord server, and share your memes in the appropriate channels. You can also suggest memes for challenges!</p>
   </div>
 
   <div class="faq-item">
@@ -89,11 +104,11 @@
     <p>Memepedia is a community-driven platform where people can share, discover, and celebrate memes. It is the online version of the Memepedia Discord server, featuring content, challenges, and more!</p>
   </div>
 
-  <a href="index" class="button">Go Back Home</a>
+  <a href="index.html" class="button">Go Back Home</a>
 </main>
 
 <footer>
-  Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
+  Created by #1 Logical Potato, with help from Magic Dippy Egg | &copy; 2025 Memepedia: Rebirth
 </footer>
 
 </body>
