--- a/faq.html
+++ b/faq.html
@@ -108,7 +108,7 @@
 </main>
 
 <footer>
-  Created by #1 Logical Potato, with help from Magic Dippy Egg | &copy; 2025 Memepedia: Rebirth
+  Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
 
 </body>
