idk updating 404 ig

--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@
 
   <h1>Oops!</h1>
   <p>Looks like you ended up in the wrong spot.</p>
-  <a href="index" class="button">Go Back Home</a>
+  <a href="https://magicdippyegg.github.io/MEMEPEDIA-CONTENT/" class="button">Go Back Home</a>
 
 </body>
 </html>
