add new item to the faq

--- a/faq.html
+++ b/faq.html
@@ -106,6 +106,15 @@
     <h3>What is Memepedia?</h3>
     <p>Memepedia is a community-driven platform where people can share, discover, and celebrate memes. It is the online version of the Memepedia Discord server, featuring content, challenges, and more!</p>
   </div>
+  
+    <div class="faq-item">
+    <h3>Why can't I speak in the discord server</h3>
+    <p>Make sure you have accepted the rules by reacting to automod with a ✅ in the #rules channel and then make sure you have verified by going into the #verify channel clicking on the thread then typing /verify and sending it if you are still having issues create a post i nthe #help channel</p>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/5I5YMN_8rcE?si=SG1ZX0RrYt4Vk6W0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </div>
+  
+  <br>
+  <br>
 
 
 </main>
