--- a/faq_backup.html
+++ b/faq_backup.html
@@ -38,13 +38,11 @@
     .faq-item h3 {
       margin: 0;
       color: #cc5500;
-      cursor: pointer;
     }
     .faq-item p {
       margin-top: 5px;
-      display: none;
     }
-
+    
     /* General Button Styles */
     .button {
       display: inline-block;
@@ -109,32 +107,21 @@
     <p>Memepedia is a community-driven platform where people can share, discover, and celebrate memes. It is the online version of the Memepedia Discord server, featuring content, challenges, and more!</p>
   </div>
   
-  <div class="faq-item">
-    <h3>Why can't I speak in the discord server?</h3>
-    <p>Make sure you have accepted the rules by reacting to automod with a ✅ in the #rules channel and then make sure you have verified by going into the #verify channel clicking on the thread then typing /verify and sending it if you are still having issues create a post in the #help channel</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/5I5YMN_8rcE?si=SG1ZX0RrYt4Vk6W0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div class="faq-item">
+    <h3>Why can't I speak in the discord server</h3>
+    <p>Make sure you have accepted the rules by reacting to automod with a ✅ in the #rules channel and then make sure you have verified by going into the #verify channel clicking on the thread then typing /verify and sending it if you are still having issues create a post i nthe #help channel</p>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/5I5YMN_8rcE?si=SG1ZX0RrYt4Vk6W0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
   
   <br>
   <br>
+
 
 </main>
 
 <footer>
   Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
-
-<script>
-  const faqItems = document.querySelectorAll('.faq-item');
-
-  faqItems.forEach(item => {
-    const question = item.querySelector('h3');
-    question.addEventListener('click', () => {
-      const answer = item.querySelector('p');
-      answer.style.display = (answer.style.display === 'none' || answer.style.display === '') ? 'block' : 'none';
-    });
-  });
-</script>
 
 </body>
 </html>
