--- a/faq.html
+++ b/faq.html
@@ -91,7 +91,9 @@
 <main>
   <div class="faq-item">
     <h3>How do I join the Memepedia Discord server?</h3>
-    <p>Click on the "Join Our Discord" button on the home page, or visit our Discord link directly: <a href="https://discord.gg/yvCTUBHNks" target="_blank" class="button">Join Our Discord</a>.</p>
+    <p>Click on the "Join Our Discord" button on the home page, or visit our Discord link directly: 
+      <a href="https://discord.gg/yvCTUBHNks" target="_blank" class="button">Join Our Discord</a>.
+    </p>
   </div>
 
   <div class="faq-item">
@@ -111,7 +113,7 @@
   
   <div class="faq-item">
     <h3>Why can't I speak in the discord server?</h3>
-    <p>Make sure you have accepted the rules by reacting to automod with a ✅ in the #rules channel and then make sure you have verified by going into the #verify channel clicking on the thread then typing /verify and sending it if you are still having issues create a post in the #help channel</p>
+    <p>Make sure you have accepted the rules by reacting to automod with a ✅ in the #rules channel and then make sure you have verified by going into the #verify channel clicking on the thread then typing /verify and sending it. If you are still having issues, create a post in the #help channel.</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/5I5YMN_8rcE?si=SG1ZX0RrYt4Vk6W0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
   
