i feel the need 2

--- a/gallery.html
+++ b/gallery.html
@@ -89,6 +89,7 @@
   <img src="memes/meme19.gif" alt="Meme19">
   <img src="memes/meme20.gif" alt="Meme20">
   <img src="memes/meme21.gif" alt="Meme21">
+  <img src="memes/meme22.gif" alt="Meme22">
   
   
   
