--- a/gallery.html
+++ b/gallery.html
@@ -91,6 +91,7 @@
   <img src="memes/meme21.gif" alt="Meme21">
   <img src="memes/meme22.gif" alt="Meme22">
   <img src="memes/meme23.gif" alt="Meme23">
+  <img src="memes/meme24.gif" alt="Meme24">
   
   
   
