--- a/gallery.html
+++ b/gallery.html
@@ -92,6 +92,7 @@
   <img src="memes/meme22.gif" alt="Meme22">
   <img src="memes/meme23.gif" alt="Meme23">
   <img src="memes/meme24.gif" alt="Meme24">
+  <img src="memes/meme25.gif" alt="Meme25">
   
   
   
