--- a/faq.html
+++ b/faq.html
@@ -118,6 +118,11 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/5I5YMN_8rcE?si=SG1ZX0RrYt4Vk6W0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
   
+    <div class="faq-item">
+    <h3>What are the rules of the Discord server?</h3>
+    <p>Here are the rules of the discord server <br>1. Please put every meme  you send in the correct channel!<br>2. No Homophobic/ Racial slurs. = INSTANT BAN<br>3. DO NOT GET MAD AT OUR BOTS! ( Ifykyk) = KICK FOR 2 DAYS<br>4. Please provide respect and listen to the Owner and Moderator. = INSTANT KICK/ WARNING/ BAN (DEPENDING ON THE ISSUE)<br>5. No controversial arguments please! ( If it really gets serious, take it to another server/group!)<br>6.NO SPAMMING= (Instant ban! Our bots will ban you!)<br>7. HAVE FUN! </p>
+  </div>
+  
   <br>
   <br>
 
