--- a/faq.html
+++ b/faq.html
@@ -108,7 +108,7 @@
 
   <div class="faq-item">
     <h3>What is Memepedia?</h3>
-    <p>Memepedia is a community-driven platform where people can share, discover, and celebrate memes. It is the online version of the Memepedia Discord server, featuring content, challenges, and more!</p>
+    <p>Memepedia is a community-driven platform where people can share, discover, and celebrate memes. It is a Discord server, featuring content, challenges, and more!</p>
   </div>
   
   <div class="faq-item">
