--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -81,7 +81,14 @@
   <h1>Video Gallery - Memepedia: Rebirth</h1>
 </header>
 
+<br>
+
+<a href="../gallery" class="button">Go Back To Gallery<a>
+
+<br>
+
 <a href="../index" class="button">Go Back Home</a>
+
 
 <main>
   <div class="video-gallery">
