--- a/gallery.html
+++ b/gallery.html
@@ -104,6 +104,10 @@
 <!-- Button to go back to the home page -->
 <a href="index" class="button">Back to Home</a>
 
+<br>
+
+<a href="/videos" class="button">Back to Home</a>
+
 <footer>
   Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
 </footer>
