--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -95,7 +95,7 @@
     <div class="video-item">
       <h3>Example Meme Video 1</h3>
       <video controls>
-        <source src="https://magicdippyegg.github.io/MEMEPEDIA-CONTENT/gallery/videos/video1.mp4" type="video/mp4">
+        <source src="videos/video1.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
@@ -103,7 +103,7 @@
     <div class="video-item">
       <h3>Example Meme Video 2</h3>
       <video controls>
-        <source src="https://magicdippyegg.github.io/MEMEPEDIA-CONTENT/gallery/videos/video2.mp4" type="video/mp4">
+        <source src="videos/video2.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
@@ -111,7 +111,7 @@
     <div class="video-item">
       <h3>Example Meme Video 3</h3>
       <video controls>
-        <source src="https://magicdippyegg.github.io/MEMEPEDIA-CONTENT/gallery/videos/video3.mp4" type="video/mp4">
+        <source src="videos/video3.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     </div>
