--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -104,7 +104,7 @@
       <h3>Example Meme Video 2</h3>
       <video controls>
         <source src="videos/video2.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+        Your browser does not support videos.
       </video>
     </div>
 
@@ -112,7 +112,7 @@
       <h3>Example Meme Video 3</h3>
       <video controls>
         <source src="videos/video3.mp4" type="video/mp4">
-        Your browser does not support the video tag.
+        Your browser does not support videos.
       </video>
     </div>
   </div>
