--- a/gallery.html
+++ b/gallery.html
@@ -105,8 +105,9 @@
 <a href="index" class="button">Back to Home</a>
 
 <br>
+<br>
 
-<a href="/videos" class="button">Back to Home</a>
+<a href="/videos" class="button">Go to videos</a>
 
 <footer>
   Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
