--- a/gallery.html
+++ b/gallery.html
@@ -107,7 +107,7 @@
 <br>
 <br>
 
-<a href="videos/" class="button">Go to videos</a>
+<a href="./videos" class="button">Go to videos</a>
 
 <footer>
   Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
