--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -16,14 +16,7 @@
     }
     header {
       background-color: #cc5500;
-      color: #ffffff;
       padding: 20px 0;
-    }
-    header img {
-      width: 80px;
-      height: 80px;
-      border-radius: 50%;
-      margin-bottom: 10px;
     }
     main {
       padding: 30px;
@@ -40,9 +33,6 @@
       padding: 15px;
       width: 300px;
       margin-bottom: 20px;
-    }
-    .video-item h3 {
-      color: #cc5500;
     }
     video {
       border-radius: 8px;
@@ -69,7 +59,6 @@
       font-size: 16px;
       transition: background-color 0.3s;
     }
-
     .button:hover {
       background-color: #b34700;
     }
@@ -78,23 +67,20 @@
 <body>
 
 <header>
-  <h1>Video Gallery</h1>
+  <!-- orange bar only -->
 </header>
 
 <br>
 
-<a href="../gallery" class="button">Go Back To Gallery<a>
+<a href="../gallery" class="button">Go Back To Gallery</a>
 
-<br>
-<br>
+<br><br>
 
 <a href="../index" class="button">Go Back Home</a>
-
 
 <main>
   <div class="video-gallery">
     <div class="video-item">
-      <h3>Example Meme Video 1</h3>
       <video controls>
         <source src="videos/video1.mp4" type="video/mp4">
         Your browser does not support the video tag.
@@ -102,7 +88,6 @@
     </div>
 
     <div class="video-item">
-      <h3>Example Meme Video 2</h3>
       <video controls>
         <source src="videos/video2.mp4" type="video/mp4">
         Your browser does not support videos.
@@ -110,7 +95,6 @@
     </div>
 
     <div class="video-item">
-      <h3>Example Meme Video 3</h3>
       <video controls>
         <source src="videos/video3.mp4" type="video/mp4">
         Your browser does not support videos.
