--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -99,6 +99,12 @@
         <source src="videos/video3.mp4" type="video/mp4">
         Your browser does not support videos.
       </video>
+	  
+	      <div class="video-item">
+      <video controls>
+        <source src="videos/video4.mp4" type="video/mp4">
+        Your browser does not support videos.
+      </video>
     </div>
   </div>
 </main>
