--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -5,64 +5,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Video Gallery - Memepedia: Rebirth</title>
   <link rel="icon" href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true">
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      background-color: #000000;
-      color: #ffffff;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
-    header {
-      background-color: #cc5500;
-      padding: 20px 0;
-    }
-    main {
-      padding: 30px;
-    }
-    .video-gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-    }
-    .video-item {
-      background-color: #222222;
-      border-radius: 8px;
-      padding: 15px;
-      width: 300px;
-      margin-bottom: 20px;
-    }
-    video {
-      border-radius: 8px;
-      width: 100%;
-      height: 200px;
-      background-color: black;
-    }
-    footer {
-      background-color: #111;
-      color: #aaaaaa;
-      padding: 15px 0;
-      font-size: 14px;
-      position: fixed;
-      width: 100%;
-      bottom: 0;
-    }
-    .button {
-      display: inline-block;
-      background-color: #cc5500;
-      color: white;
-      padding: 15px 25px;
-      text-decoration: none;
-      border-radius: 8px;
-      font-size: 16px;
-      transition: background-color 0.3s;
-    }
-    .button:hover {
-      background-color: #b34700;
-    }
-  </style>
+<style>
+  body {
+    font-family: 'Arial', sans-serif;
+    background-color: #000000;
+    color: #ffffff;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+  }
+  header {
+    background-color: #cc5500;
+    color: #ffffff;
+    padding: 20px 0;
+  }
+  header img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+  }
+  main {
+    padding: 30px;
+  }
+  .video-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  .video-item {
+    background-color: #222222;
+    border-radius: 8px;
+    padding: 15px;
+    width: 300px;
+    margin-bottom: 20px;
+  }
+  video {
+    border-radius: 8px;
+    width: 100%;
+    height: 200px;
+    background-color: black;
+  }
+  footer {
+    background-color: #111;
+    color: #aaaaaa;
+    padding: 15px 0;
+    font-size: 14px;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+  }
+  .button {
+    display: inline-block;
+    background-color: #cc5500;
+    color: white;
+    padding: 15px 25px;
+    text-decoration: none;
+    border-radius: 8px;
+    font-size: 16px;
+    transition: background-color 0.3s;
+  }
+  .button:hover {
+    background-color: #b34700;
+  }
+</style>
 </head>
 <body>
 
