--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -29,9 +29,8 @@
     padding: 30px;
   }
   .video-gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     max-width: 1200px;
     margin: 0 auto;
@@ -40,8 +39,6 @@
     background-color: #222222;
     border-radius: 8px;
     padding: 15px;
-    width: 300px;
-    margin-bottom: 20px;
   }
   video {
     border-radius: 8px;
