--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -29,16 +29,17 @@
     padding: 30px;
   }
   .video-gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
   }
   .video-item {
     background-color: #222222;
     border-radius: 8px;
     padding: 15px;
+    width: 300px;
+    margin-bottom: 20px;
   }
   video {
     border-radius: 8px;
@@ -64,6 +65,7 @@
     border-radius: 8px;
     font-size: 16px;
     transition: background-color 0.3s;
+    margin: 10px;
   }
   .button:hover {
     background-color: #b34700;
