--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -29,17 +29,16 @@
     padding: 30px;
   }
   .video-gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
+    justify-items: center;
   }
   .video-item {
     background-color: #222222;
     border-radius: 8px;
     padding: 15px;
     width: 300px;
-    margin-bottom: 20px;
   }
   video {
     border-radius: 8px;
