--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -14,38 +14,50 @@
     padding: 0;
     text-align: center;
   }
+
   header {
     background-color: #cc5500;
     color: #ffffff;
     padding: 20px 0;
   }
+
   header img {
     width: 80px;
     height: 80px;
     border-radius: 50%;
     margin-bottom: 10px;
   }
+
   main {
     padding: 30px;
   }
+
   .video-gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
     justify-items: center;
   }
+
   .video-item {
     background-color: #222222;
     border-radius: 8px;
     padding: 15px;
-    width: 300px;
+    width: 100%;
+    margin-bottom: 20px;
   }
+
+  .video-item h3 {
+    color: #cc5500;
+  }
+
   video {
     border-radius: 8px;
     width: 100%;
     height: 200px;
     background-color: black;
   }
+
   footer {
     background-color: #111;
     color: #aaaaaa;
@@ -55,6 +67,7 @@
     width: 100%;
     bottom: 0;
   }
+
   .button {
     display: inline-block;
     background-color: #cc5500;
@@ -64,8 +77,8 @@
     border-radius: 8px;
     font-size: 16px;
     transition: background-color 0.3s;
-    margin: 10px;
   }
+
   .button:hover {
     background-color: #b34700;
   }
