--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -6,89 +6,90 @@
   <title>Video Gallery - Memepedia: Rebirth</title>
   <link rel="icon" href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true">
 <style>
-  body {
-    font-family: 'Arial', sans-serif;
-    background-color: #000000;
-    color: #ffffff;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
+body {
+  font-family: 'Arial', sans-serif;
+  background-color: #000000;
+  color: #ffffff;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
 
-  header {
-    background-color: #cc5500;
-    color: #ffffff;
-    padding: 20px 0;
-  }
+header {
+  background-color: #cc5500;
+  color: #ffffff;
+  padding: 20px 0;
+}
 
-  header img {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    margin-bottom: 10px;
-  }
+header img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
 
-  main {
-    padding: 30px;
-  }
+main {
+  padding: 30px;
+}
 
-  .video-gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 20px;
-    justify-items: center;
-  }
+.video-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; /* Center the items in the gallery */
+  gap: 20px;
+  margin: 0 auto;
+  max-width: 1000px; /* Optional: to limit gallery width */
+}
 
-  .video-item {
-    background-color: #222222;
-    border-radius: 8px;
-    padding: 15px;
-    width: 100%;
-    margin-bottom: 20px;
-  }
+.video-item {
+  background-color: #222222;
+  border-radius: 8px;
+  padding: 15px;
+  width: 100%; /* Full width of the container */
+  max-width: 300px; /* Maximum width per video item */
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center; /* Center the video inside the container */
+}
 
-  .video-item h3 {
-    color: #cc5500;
-  }
+video {
+  border-radius: 8px;
+  width: 100%;
+  height: 200px;
+  background-color: black;
+}
 
-  video {
-    border-radius: 8px;
-    width: 100%;
-    height: 200px;
-    background-color: black;
-  }
+footer {
+  background-color: #111;
+  color: #aaaaaa;
+  padding: 15px 0;
+  font-size: 14px;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+}
 
-  footer {
-    background-color: #111;
-    color: #aaaaaa;
-    padding: 15px 0;
-    font-size: 14px;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-  }
+.button {
+  display: inline-block;
+  background-color: #cc5500;
+  color: white;
+  padding: 15px 25px;
+  text-decoration: none;
+  border-radius: 8px;
+  font-size: 16px;
+  transition: background-color 0.3s;
+}
 
-  .button {
-    display: inline-block;
-    background-color: #cc5500;
-    color: white;
-    padding: 15px 25px;
-    text-decoration: none;
-    border-radius: 8px;
-    font-size: 16px;
-    transition: background-color 0.3s;
-  }
-
-  .button:hover {
-    background-color: #b34700;
-  }
+.button:hover {
+  background-color: #b34700;
+}
 </style>
 </head>
 <body>
 
 <header>
-  <!-- orange bar only -->
-</header>
+  <h1>Video Gallery</h1>
+ </header>
 
 <br>
 
@@ -119,8 +120,9 @@
         <source src="videos/video3.mp4" type="video/mp4">
         Your browser does not support videos.
       </video>
-	  
-	      <div class="video-item">
+    </div>
+
+    <div class="video-item">
       <video controls>
         <source src="videos/video4.mp4" type="video/mp4">
         Your browser does not support videos.
@@ -128,6 +130,7 @@
     </div>
   </div>
 </main>
+
 
 <footer>
   Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
