--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -128,9 +128,17 @@ footer {
         Your browser does not support videos.
       </video>
     </div>
+	
+	    <div class="video-item">
+      <video controls>
+        <source src="videos/video5.mp4" type="video/mp4">
+        Your browser does not support videos.
+      </video>
+    </div>
   </div>
 </main>
 
+<br><br>
 
 <footer>
   Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
