--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -135,6 +135,20 @@ footer {
         Your browser does not support videos.
       </video>
     </div>
+	
+		    <div class="video-item">
+      <video controls>
+        <source src="videos/video6.mp4" type="video/mp4">
+        Your browser does not support videos.
+      </video>
+    </div>
+	
+			    <div class="video-item">
+      <video controls>
+        <source src="videos/video7.mp4" type="video/mp4">
+        Your browser does not support videos.
+      </video>
+    </div>
   </div>
 </main>
 
