--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -149,6 +149,13 @@ footer {
         Your browser does not support videos.
       </video>
     </div>
+	
+				    <div class="video-item">
+      <video controls>
+        <source src="videos/video8.mp4" type="video/mp4">
+        Your browser does not support videos.
+      </video>
+    </div>
   </div>
 </main>
 
