--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -159,7 +159,7 @@ footer {
 	
 					    <div class="video-item">
       <video controls>
-        <source src="videos/video9.mp4" type="video/mp4">
+        <source src="videos/video9.mov" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
