--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -163,6 +163,13 @@ footer {
         Your browser does not support videos.
       </video>
     </div>
+	
+						    <div class="video-item">
+      <video controls>
+        <source src="videos/video10.mp4" type="video/mp4">
+        Your browser does not support videos.
+      </video>
+    </div>
   </div>
 </main>
 
