--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -170,6 +170,12 @@ footer {
         Your browser does not support videos.
       </video>
     </div>
+	
+	      <video controls>
+        <source src="videos/video11.mp4" type="video/mp4">
+        Your browser does not support videos.
+      </video>
+    </div>
   </div>
 </main>
 
