--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -176,6 +176,18 @@ footer {
         Your browser does not support videos.
       </video>
     </div>
+	
+		      <video controls>
+        <source src="videos/video12.mov" type="video/mp4">
+        Your browser does not support videos.
+      </video>
+    </div>
+	
+			      <video controls>
+        <source src="videos/video13.mov" type="video/mp4">
+        Your browser does not support videos.
+      </video>
+    </div>
   </div>
 </main>
 
