--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -171,18 +171,21 @@ footer {
       </video>
     </div>
 	
+							    <div class="video-item">
 	      <video controls>
         <source src="videos/video11.mp4" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
 	
+							    <div class="video-item">
 		      <video controls>
         <source src="videos/video12.mov" type="video/mp4">
         Your browser does not support videos.
       </video>
     </div>
 	
+							    <div class="video-item">
 			      <video controls>
         <source src="videos/video13.mov" type="video/mp4">
         Your browser does not support videos.
