--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
   <h1>Contact Us</h1>
   <p>If you have any questions, feel free to reach out to us!</p>
 
-  <p>Email: <a href="mailto:magicdippyegg@gmail.com" style="color: #cc5500;">magicdippyegg@gmail.com</a></p>
+  <p>Email: <a href="mailto:memepediarebirth@gmail.com" style="color: #cc5500;">memepediarebirth@gmail.com</a></p>
   
   <p>Join the conversation on Discord:</p>
   <p>Magic Dippy Egg: <strong>@magicdippyegg</strong></p>
