--- a/gallery/videos.html
+++ b/gallery/videos.html
@@ -191,6 +191,13 @@ footer {
         Your browser does not support videos.
       </video>
     </div>
+	
+								    <div class="video-item">
+			      <video controls>
+        <source src="videos/video14.mp4" type="video/mp4">
+        Your browser does not support videos.
+      </video>
+    </div>
   </div>
 </main>
 
