--- a/gallery.html
+++ b/gallery.html
@@ -93,6 +93,7 @@
   <img src="memes/meme23.gif" alt="Meme23">
   <img src="memes/meme24.gif" alt="Meme24">
   <img src="memes/meme25.gif" alt="Meme25">
+  <img src="memes/meme26.png" alt="Meme26">
   
   
   
