--- a/faq.html
+++ b/faq.html
@@ -86,7 +86,7 @@
 </header>
 
 <br>
-  <a href="index.html" class="button">Go Back Home</a>
+  <a href="index" class="button">Go Back Home</a>
 
 <main>
   <div class="faq-item">
