--- a/songs.html
+++ b/songs.html
@@ -97,6 +97,26 @@
     <div class="spotify-item">
       <iframe src="https://open.spotify.com/embed/track/4zW7Titqo6iTdhtIl8T3RG" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </div>
+	
+	 <!-- Embed Spotify Track 5 -->
+    <div class="spotify-item">
+      <iframe src="https://open.spotify.com/embed/track/63eRbzK1LmC5hwpqzH31pS" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
+	
+		 <!-- Embed Spotify Track 6 -->
+    <div class="spotify-item">
+      <iframe src="https://open.spotify.com/embed/track/3hWfKBt3n7j1xqIy6LA5ve" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
+	
+			 <!-- Embed Spotify Track 7 -->
+    <div class="spotify-item">
+      <iframe src="https://open.spotify.com/embed/track/2WfaOiMkCvy7F5fcp2zZ8L" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
+	
+				 <!-- Embed Spotify Track 8 -->
+    <div class="spotify-item">
+      <iframe src="https://open.spotify.com/embed/track/5RBOcBpJXaNnHCGViJmYhh" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
 
   </div>
 </main>
