--- a/songs.html
+++ b/songs.html
@@ -117,6 +117,16 @@
     <div class="spotify-item">
       <iframe src="https://open.spotify.com/embed/track/5RBOcBpJXaNnHCGViJmYhh" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </div>
+	
+					 <!-- Embed Spotify Track 9 -->
+    <div class="spotify-item">
+      <iframe src="https://open.spotify.com/embed/track/03UrZgTINDqvnUMbbIMhql" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
+	
+						 <!-- Embed Spotify Track 10 -->
+    <div class="spotify-item">
+      <iframe src="https://open.spotify.com/embed/track/4LwU4Vp6od3Sb08CsP99GC" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
 
   </div>
 </main>
