--- a/songs.html
+++ b/songs.html
@@ -127,6 +127,21 @@
     <div class="spotify-item">
       <iframe src="https://open.spotify.com/embed/track/4LwU4Vp6od3Sb08CsP99GC" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </div>
+	
+							 <!-- Embed Spotify Track 11 -->
+    <div class="spotify-item">
+      <iframe src="https://open.spotify.com/embed/track/6rT0BKAbg4y35tukHcfk4N" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
+	
+								 <!-- Embed Spotify Track 12 -->
+    <div class="spotify-item">
+      <iframe src="https://open.spotify.com/embed/track/3K6ljaWiPpywzZ27Z2flDQ" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
+	
+									 <!-- Embed Spotify Track 12 -->
+    <div class="spotify-item">
+      <iframe src="https://open.spotify.com/embed/track/6Dk5fHTvH897XrVzCO64Mx" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
 
   </div>
 </main>
