--- a/faq.html
+++ b/faq.html
@@ -126,6 +126,10 @@
   <br>
   <br>
 
+
+
+
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSd8OqrmgKo2NiqIsqb3T28rGhzvcmaqwlRA7LpsVgVVoSWyNQ/viewform?usp=header" class="button">Ask a question</a>
 </main>
 
 <footer>
