--- a/songs.html
+++ b/songs.html
@@ -142,6 +142,16 @@
     <div class="spotify-item">
       <iframe src="https://open.spotify.com/embed/track/6Dk5fHTvH897XrVzCO64Mx" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </div>
+	
+										 <!-- Embed Spotify Track 13 -->
+    <div class="spotify-item">
+      <iframe src="https://open.spotify.com/embed/track/3zXIvb4nZ3cTdT8CsbTy3U" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
+	
+											 <!-- Embed Spotify Track 14 -->
+    <div class="spotify-item">
+      <iframe src="https://open.spotify.com/embed/track/4IYKjN1DrYzxKXt0umJqsG" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
 
   </div>
 </main>
