--- a/songs.html
+++ b/songs.html
@@ -152,6 +152,26 @@
     <div class="spotify-item">
       <iframe src="https://open.spotify.com/embed/track/4IYKjN1DrYzxKXt0umJqsG" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </div>
+	
+												 <!-- Embed Spotify Track 15 -->
+    <div class="spotify-item">
+      <iframe src="https://open.spotify.com/embed/track/3bC1ahPIYt1btJzSSEyyrF" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
+	
+													 <!-- Embed Spotify Track 16 -->
+    <div class="spotify-item">
+      <iframe src="https://open.spotify.com/embed/track/1ckhUtD8nBH2ShPlU8w2nU" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
+	
+														 <!-- Embed Spotify Track 17 -->
+    <div class="spotify-item">
+      <iframe src="https://open.spotify.com/embed/track/6epn3r7S14KUqlReYr77hA" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
+	
+															 <!-- Embed Spotify Track 18 -->
+    <div class="spotify-item">
+      <iframe src="https://open.spotify.com/embed/track/2En6kxGCjZxXmKJ1IYu4Fp" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
 
   </div>
 </main>
