added song "tribute"

--- a/songs.html
+++ b/songs.html
@@ -206,6 +206,11 @@
     <div class="spotify-item">
       <iframe src="https://open.spotify.com/embed/track/2NqokDBGuaIXrTNDlr09y9" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </div>
+	
+																							 <!-- Embed Spotify Track 26 -->
+    <div class="spotify-item">
+      <iframe src="https://open.spotify.com/embed/track/6crBy2sODw2HS53xquM6us" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
 
 
   </div>
