--- a/gallery.html
+++ b/gallery.html
@@ -94,6 +94,7 @@
   <img src="memes/meme24.gif" alt="Meme24">
   <img src="memes/meme25.gif" alt="Meme25">
   <img src="memes/meme26.png" alt="Meme26">
+  <img src="memes/meme27.jpg" alt="Meme27">
   
   
   
