added tiktok to home screen

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
   <a href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT" class="button" target="_blank">View GitHub Content</a>
   <a href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/raw/refs/heads/main/Download/Meme%20Goose.msi" class="button" target="_blank">Download Meme Goose</a>
   <a href="https://www.youtube.com/@MemepediaRebirth" class="button" target="_blank">YouTube Channel</a>
+    <a href="https://www.tiktok.com/@memepedia.rebirth" class="button" target="_blank">TikTok Channel</a>
   
    <h2>Other Pages</h2>
      <a href="gallery" class="button">Visit Meme Gallery</a>
