--- a/chat.html
+++ b/chat.html
@@ -91,7 +91,7 @@
     e.preventDefault();
     const message = document.getElementById('message').value;
 
-    const response = await fetch('https://your-vercel-project-name.vercel.app/api/send-to-discord', {
+    const response = await fetch('https://memepedia-backend.vercel.app/api/send-to-discord', {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json'
