--- a/chat.html
+++ b/chat.html
@@ -6,67 +6,66 @@
   <title>Memepedia Chat</title>
   <style>
     body {
-      background-color: #1a1a1a;
-      color: #f0f0f0;
-      font-family: 'Arial', sans-serif;
+      background-color: #121212;
+      color: white;
+      font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
     }
 
     header {
-      background-color: #2c2c2c;
-      width: 100%;
+      background-color: #202020;
       padding: 20px;
       text-align: center;
       font-size: 2em;
       font-weight: bold;
-      color: #ffcc00;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.5);
+      color: #00ffcc;
+      border-bottom: 2px solid #00ffcc;
     }
 
     main {
-      margin-top: 30px;
-      width: 90%;
-      max-width: 600px;
+      max-width: 800px;
+      margin: 30px auto;
+      padding: 20px;
+      background-color: #1e1e1e;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #000;
     }
 
     #message-input {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       font-size: 1em;
-      border: none;
       border-radius: 5px;
+      border: none;
       margin-bottom: 10px;
     }
 
     button {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       font-size: 1em;
-      background-color: #ffcc00;
-      color: black;
+      background-color: #00ffcc;
+      color: #000;
       border: none;
       border-radius: 5px;
-      cursor: pointer;
       font-weight: bold;
+      cursor: pointer;
     }
 
     button:hover {
-      background-color: #e6b800;
+      background-color: #00d6ad;
     }
 
     #latest-messages {
-      margin-top: 20px;
-      background-color: #2b2b2b;
+      margin-top: 25px;
+      background-color: #2a2a2a;
       padding: 15px;
       border-radius: 8px;
     }
 
     .message {
-      padding: 8px;
+      padding: 10px;
       border-bottom: 1px solid #444;
     }
 
@@ -75,16 +74,16 @@
     }
 
     .message strong {
-      color: #ffcc00;
+      color: #00ffcc;
     }
   </style>
 </head>
 <body>
 
-  <header>MEMEPEDIA CHAT</header>
+  <header>🗨️ Memepedia Chat Room</header>
 
   <main>
-    <input id="message-input" placeholder="Type your meme here..." />
+    <input id="message-input" placeholder="Type your meme message..." />
     <button onclick="sendMessage()">Send</button>
 
     <div id="latest-messages">
@@ -98,7 +97,7 @@
       if (!content) return;
 
       try {
-        const response = await fetch('https://memepedia-backend.vercel.app/api/send-to-discord', {
+        await fetch('https://memepedia-backend.vercel.app/api/send-to-discord', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
@@ -106,13 +105,8 @@
           body: JSON.stringify({ content })
         });
 
-        if (!response.ok) {
-          console.error('Failed to send message');
-          return;
-        }
-
         document.getElementById('message-input').value = '';
-        fetchMessages(); // Refresh after sending
+        fetchMessages(); // Refresh messages
       } catch (error) {
         console.error('Error sending message:', error);
       }
@@ -125,6 +119,7 @@
 
         if (!Array.isArray(data)) {
           console.error("Expected array of messages, got:", data);
+          document.getElementById('latest-messages').innerHTML = `<p>Error: Unable to load messages.</p>`;
           return;
         }
 
@@ -139,6 +134,7 @@
         });
       } catch (err) {
         console.error('Error fetching messages:', err);
+        document.getElementById('latest-messages').innerHTML = `<p>Error: Unable to load messages.</p>`;
       }
     }
 
