forgot the home button lol

--- a/chat.html
+++ b/chat.html
@@ -111,6 +111,8 @@
     <img src="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true" alt="Memepedia Logo">
   </header>
   <main>
+  
+  <a href="index" class="button">Back to Home</a>
     <div class="chat-container">
       <div class="messages-container" id="messagesContainer"></div>
       <div class="input-container">
