--- a/chat.html
+++ b/chat.html
@@ -121,6 +121,9 @@
       </div>
     </div>
   </main>
+  
+    <h2>This page is linked to the #general section of the discord server</h2>
+  
   <footer>
     Created by #1 Logical Potato, with help from Magic Dippy Egg | Memepedia: Rebirth
   </footer>
