--- a/chat.html
+++ b/chat.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Memepedia Chat</title>
+    <link rel="icon" href="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true">
   <style>
     body {
       font-family: 'Arial', sans-serif;
