--- a/chatbot.html
+++ b/chatbot.html
@@ -112,6 +112,8 @@
     <img src="https://github.com/MagicDippyEgg/MEMEPEDIA-CONTENT/blob/main/icon.png?raw=true" alt="Memepedia Logo">
   </header>
   <main>
+  
+    <a href="index" class="button">Back to Home</a>
     <div class="chat-container">
       <div class="messages-container" id="messages"></div>
       <div class="input-container">
