--- a/chatbot.html
+++ b/chatbot.html
@@ -170,7 +170,7 @@
         
         const author = document.createElement('div');
         author.classList.add('author');
-        author.textContent = sender === 'user' ? 'You' : ':memepedia bot:';
+        author.textContent = sender === 'user' ? 'You' : 'Memepedia Bot';
 
         const content = document.createElement('div');
         content.classList.add('content');
